# banners_rotator

./: .gitignore  Cargo.toml  README.md
examples/: banners.csv  banners10k.csv  generate_example.py
src/: main.rs  storage.rs
src/util/: cumulative_weights.rs  mod.rs
